# Gravity-

./: CMakeLists.txt  runSim.cpp
include/: Drawer.hpp  Planet.hpp  scri.hpp
tests/: CMakeLists.txt  testyTests.cpp
